--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT = 3000
-MONGO_DB = mongodb+srv://a:a@cluster0.2e6a1.mongodb.net/redditdb?retryWrites=true&w=majority
-AWS_ACCESS_KEY_ID = AKIAIRAE22ZEZIM5BL5Q
-BUCKET_NAME = photos2322
-AWS_SECRET_ACCESS_KEY = 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
-ACCESS_TOKEN = SDFASDFSDF23231##@@#
-REFRESH_TOKEN = 23R23252***/*-/WFA
+PORT=3000
+MONGO_DB=mongodb+srv://a:a@cluster0.2e6a1.mongodb.net/redditdb?retryWrites=true&w=majority
+AWS_ACCESS_KEY_ID=AKIAIRAE22ZEZIM5BL5Q
+BUCKET_NAME=photos2322
+AWS_SECRET_ACCESS_KEY=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
+ACCESS_TOKEN=SDFASDFSDF23231##@@#
+REFRESH_TOKEN=23R23252***/*-/WFA
