--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,18 @@
 {
   "name": "reddit-react",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
+    "eslint-plugin-autofix": "^1.0.3",
+    "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.14.1",
     "normalizr": "^3.6.1",
     "react": "^17.0.1",
@@ -21,14 +26,17 @@
     "use-route-as-state": "^1.1.0"
   },
   "scripts": {
-  
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint src",
     "start": "react-scripts --max_old_space_size=4096 start",
- "build": "react-scripts --max_old_space_size=4096 build"
+    "build": "react-scripts --max_old_space_size=4096 build"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -41,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-unused-imports": "^1.1.0"
   }
 }
