--- a/package.json
+++ b/package.json
@@ -20,6 +20,20 @@
 	},
 	"scripts": {
 		"start": "nodemon ./server/app.js",
-		"test": "mocha"
+		"test": "mocha",
+		"lint": "./node_modules/.bin/eslint server/api/reddit-api.js"
+	},
+	"devDependencies": {
+		"eslint": "^7.22.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-google": "^0.14.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"eslint-plugin-unused-imports": "^1.1.0",
+		"prettier": "^2.2.1"
 	}
 }
