--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.codeActionsOnSave": null,
-    "workbench.colorTheme": "Solarized Dark"
+    "workbench.colorTheme": "Monokai",
+    "editor.formatOnSave": true
 }
